Revision history for AM-Algorithm

{{$NEXT}}
    test_in_data in Result changed to test_in_train
3.01      2014-05-15 21:18:29 Asia/Seoul
    Gang and analogical set structures changed to contain Item objects
    Unique id field added to Item
    analogical set structure changed to index on Item id for easy searching
3.00      2014-05-14 12:02:05 Asia/Seoul
    Stopped printing to amcpresults and terminal
    Switched to Log::Any
    Removed format variables and used Text::Table for reports
    Added Algorithm::AM::Result module
    Removed separate support for "short" and "long" outcomes
    Replaced Project with DataSet and Item
        - resulted in complete reorganization of everything
    Updated/rewrote all documentation
2.45      2014-02-11 21:27:02 America/Los_Angeles
    Fixed gang/grandtotal calculation bugs
    removed debug print statements!
2.44      2014-02-11 16:13:54 America/Los_Angeles
    Fix gangcount updating (bad loop bound)
2.43      2014-02-11 12:22:57 America/Los_Angeles
    reverse 2.42 (think I was wrong)
    More debug printing
    don't pass ref to keys (experimental feature)
2.42      2014-02-10 21:32:23 America/Los_Angeles
    More debug printing
    fix uninitialized array element
2.41      2014-02-10 12:37:57 America/Los_Angeles
    More debug printing
    Fixed big-int bug introduced in 2.40
2.40      2014-02-09 18:37:58 America/Los_Angeles
    More debug printing
2.39      2014-02-08 21:32:43 America/Los_Angeles
    Added lots of print statements for trial release; need more info!
2.38      2014-02-07 20:27:29 America/Los_Angeles
    changed back C99 datatypes until further testing
2.37      2014-02-07 18:52:07 America/Los_Angeles
    removed non-existent dependency that prevented installation
2.36      2014-02-07 16:24:26 America/Los_Angeles
    remove given/when (which trigger 'experimental' warnings)
    better handling of project files
    line directives added to ginormous eval statement