@@ -164,10 +164,10 @@ typedef struct AM_guts {
   AM_SHORT *lptr[4];
   AM_SUPRA *sptr[4];
 
-  /* array ref containing number of active variables in
+  /* array ref containing number of active features in
    * each lattice (currently we us four lattices)
    */
-  SV **activeVar;
+  SV **active_feats;
   /* array ref containing class labels for whole data set;
    * array index is data item index in data set.
    */
@@ -359,7 +359,7 @@ _xs_initialize(...)
   /* $self, the AM object */
   project = (HV *) SvRV(ST(0));
   /* For explanations on these, see the comments on AM_guts */
-  guts.activeVar = AvARRAY((AV *) SvRV(ST(1)));
+  guts.active_feats = AvARRAY((AV *) SvRV(ST(1)));
   guts.classes = AvARRAY((AV *) SvRV(ST(2)));
   guts.itemcontextchain = AvARRAY((AV *) SvRV(ST(3)));
   guts.itemcontextchainhead = (HV *) SvRV(ST(4));
@@ -379,7 +379,7 @@ _xs_initialize(...)
    */
 
   for (i = 0; i < 4; ++i) {
-    UV v = SvUVX(guts.activeVar[i]);
+    UV v = SvUVX(guts.active_feats[i]);
     Newz(0, guts.lptr[i], 1 << v, AM_SHORT);
     Newz(0, guts.sptr[i], 1 << (v + 1), AM_SUPRA); /* CHANGED */
     Newz(0, guts.sptr[i][0].data, 2, AM_SHORT);
@@ -401,7 +401,7 @@ _fillandcount(...)
   UV linear_flag;
   AM_GUTS *guts;
   MAGIC *mg;
-  AM_SHORT activeVar[4];
+  AM_SHORT active_feats[4];
   AM_SHORT **lptr;
   AM_SUPRA **sptr;
   AM_SHORT nptr[4];/* this helps us manage the free list in sptr[i] */
@@ -437,11 +437,11 @@ _fillandcount(...)
   lptr = guts->lptr;
   sptr = guts->sptr;
   for (chunk = 0; chunk < 4; ++chunk) {
-    activeVar[chunk] = (AM_SHORT) SvUVX(guts->activeVar[chunk]);
-    Zero(lptr[chunk], 1 << activeVar[chunk], AM_SHORT);
+    active_feats[chunk] = (AM_SHORT) SvUVX(guts->active_feats[chunk]);
+    Zero(lptr[chunk], 1 << active_feats[chunk], AM_SHORT);
     sptr[chunk][0].next = 0;
     nptr[chunk] = 1;
-    for (i = 1; i < 1 << (activeVar[chunk] + 1); ++i) /* CHANGED */
+    for (i = 1; i < 1 << (active_feats[chunk] + 1); ++i) /* CHANGED */
       sptr[chunk][i].next = (AM_SHORT) i + 1;
   }
 
@@ -476,7 +476,7 @@ _fillandcount(...)
     AM_SHORT *contextptr = (AM_SHORT *) HeKEY(he);
     AM_SHORT class = (AM_SHORT) SvUVX(HeVAL(he));
     for (chunk = 0; chunk < 4; ++chunk, ++contextptr) {
-      AM_SHORT active = activeVar[chunk];
+      AM_SHORT active = active_feats[chunk];
       AM_SHORT *lattice = lptr[chunk];
       AM_SUPRA *supralist = sptr[chunk];
       AM_SHORT nextsupra = nptr[chunk];
