@@ -46,18 +46,11 @@ Add other bigint helper methods into BigInt and test them, as well.
 
 Instead of passing around the "activeVars" variable and skipping nulls if needed, it might make more sense to create an array containing all of the active indices, i.e. [0,1,2,4,6,7] if 3 and 5 are null and exclude nulls is on. This would make it easier to simplify things via `map` or whatever.
 
-Scrub the code for consistent naming. "Data" should be given, or training, or exemplar. Everything is data, so why call anything "data"?
-    - class (X)
-    - exemplar (X)
-    - spec (X)
-    - data (X)
-    - variables ()
-
 do something better than just calling rand() for the probability/skip function.
 
 Move the XS code to a different package so all of those variables can be stored in something private: pointers, itemcontextchainhead, etc. The work done on gangs could also be put into this package, since it requires special knowledge of the underlying structure. Maybe the Guts package?
 
-change activeVars to be accepted at classification time
+change active_features to be accepted at classification time
 
 properly destroy project or AM object on error so that illegal state is not possible even if someone catches an error and tries to continue.
 
