@@ -36,16 +36,6 @@ sub chapter_3_test {
     return $test;
 }
 
-# return a project pre-loaded with chapter 3 data
-sub chapter_3_project {
-    my $project = Algorithm::AM::Project->new(variables => 3);
-    for my $datum(chapter_3_data()){
-        $project->add_data(@$datum);
-    }
-    $project->add_test([qw(3 1 2)], 'r', 'test item comment');
-    return $project;
-}
-
 # return a list of array refs containing the items from chapter 3
 sub chapter_3_data {
     return (
