@@ -2,6 +2,7 @@ Revision history for AM-Algorithm
 
 {{$NEXT}}
     test_in_data in Result changed to test_in_train
+    'vars' in gang_effects return structure changed to 'features'
 3.01      2014-05-15 21:18:29 Asia/Seoul
     Gang and analogical set structures changed to contain Item objects
     Unique id field added to Item
